@@ -3,11 +3,11 @@ package com.tecno.corralito.security;
 
 import com.tecno.corralito.security.filter.JwtTokenValidator;
 import com.tecno.corralito.services.impl.AuthServiceImpl;
-import com.tecno.corralito.services.impl.UserDetailServiceImpl;
 import com.tecno.corralito.util.JwtUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -17,6 +17,7 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -26,6 +27,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -33,6 +35,10 @@ public class SecurityConfig {
 
     @Autowired
     private JwtUtils jwtUtils;
+
+    @Autowired
+    @Lazy
+    private AuthServiceImpl authService;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
@@ -43,14 +49,7 @@ public class SecurityConfig {
                 .authorizeHttpRequests(http -> {
                     // Endpoints públicos
                     http.requestMatchers(HttpMethod.POST, "/auth/**").permitAll();
-
-                    // Endpoints protegidos
-                    http.requestMatchers(HttpMethod.GET, "/cuentas/{id}/saldo").hasAnyRole("USER", "ADMIN");
-                    http.requestMatchers(HttpMethod.POST, "/cuentas/transferir").hasRole("USER");
-                    http.requestMatchers(HttpMethod.GET, "/cuentas/todas").hasRole("ADMIN");
-                    http.requestMatchers(HttpMethod.GET, "/transacciones/cuenta/{cuentaId}").hasAnyRole("USER", "ADMIN");
-
-                    // Denegar todos los demás
+                    http.requestMatchers(HttpMethod.POST, "/register/turista").permitAll();
                     http.anyRequest().denyAll();
                 })
                 .addFilterBefore(new JwtTokenValidator(jwtUtils), BasicAuthenticationFilter.class);
@@ -61,7 +60,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Permitir el origen de tu aplicación Angular
+        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Permitir el origen de tu aplicación Angular
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
         configuration.setAllowCredentials(true);
@@ -76,10 +75,10 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationProvider authenticationProvider(AuthServiceImpl authService) {
+    public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
         provider.setPasswordEncoder(passwordEncoder());
-        provider.setUserDetailsService(userDetailService);
+        provider.setUserDetailsService((UserDetailsService) authService);
         return provider;
     }
 
